Alert stop and getlatest